--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
 .row span:hover {
   filter: brightness(0.9);
 }
-#num:active {
+#num:active, #num.active {
   transition: 0.08s;
   box-shadow: 0 2px 0 1px var(--key-shadow) inset;
   font-size: 16px;
@@ -167,7 +167,7 @@ body {
   background-color: var(--key-operator);
   box-shadow: 0 4px 0 1px var(--key-operator-shadow);
 }
-#operator:active {
+#operator:active, #operator.active {
   transition: 0.08s;
   box-shadow: 0 2px 0 1px var(--key-operator-shadow) inset;
   font-size: 16px;
@@ -176,7 +176,7 @@ body {
   background-color: var(--key-del);
   box-shadow: 0 4px 0 1px var(--key-del-shadow);
 }
-#del:active {
+#del:active, #del.active{
   transition: 0.08s;
   box-shadow: 0 2px 0 1px var(--key-del-shadow) inset;
   font-size: 16px;
@@ -185,7 +185,7 @@ body {
   background-color: var(--key-equ);
   box-shadow: 0 4px 0 1px var(--key-equ-shadow);
 }
-#equ:active {
+#equ:active, #equ.active{
   transition: 0.08s;
   box-shadow: 0 2px 0 1px var(--key-equ-shadow) inset;
   font-size: 16px;
@@ -194,7 +194,7 @@ body {
   background-color: var(--key-other);
   box-shadow: 0 4px 0 1px var(--key-other-shadow);
 }
-#other:active {
+#other:active, #other.active {
   transition: 0.08s;
   box-shadow: 0 2px 0 1px var(--key-other-shadow) inset;
   font-size: 16px;
@@ -243,5 +243,3 @@ body {
   border-radius:5px;
   background-color: var(--histo-scroll-primary); 
 }
-
-
